added other sections

--- a/index.html
+++ b/index.html
@@ -96,10 +96,24 @@
 
 
     <div id="tech-sect__container">
-        <h2 class="glitch" About Me>Technologies</h2>
+        <h2 class="glitch">Technologies</h2>
         <div>
             <a href="/" class="arrow-button__tech-sect" title="Go to next section"> <i
                     class="fa-solid fa-arrow-down-long fa-bounce"></i></a>
+        </div>
+    </div>
+    <div id="tech-sect__container">
+        <h2 class="glitch">Projects</h2>
+        <div>
+            <a href="/" class="arrow-button__tech-sect" title="Go to next section"> <i
+                    class="fa-solid fa-arrow-down-long fa-bounce"></i></a>
+        </div>
+    </div>
+    <div id="tech-sect__container">
+        <h2 class="glitch">Contact Form</h2>
+        <div>
+            <a href="/" class="arrow-button__tech-sect" title="Go to next section"> <i
+                    class="fa-solid fa-arrow-up-long fa-bounce"></i></a>
         </div>
     </div>
 </body>
