--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     class="fa-solid fa-arrow-down-long fa-bounce"></i></a>
         </div>
     </div>
-    <div id="tech-sect__container">
+    <div id="projects-sect__container">
         <h2 class="glitch">Projects</h2>
         <div>
             <a href="/" class="arrow-button__tech-sect" title="Go to next section"> <i
