--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </h1>
     </div>
 
-    <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" viewBox="10 10 80 80">
+    <svg xlink:href="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" viewBox="10 10 80 80">
         <path fill="#05445E" class="out-top"
             d="M37-5C25.1-14.7,5.7-19.1-9.2-10-28.5,1.8-32.7,31.1-19.8,49c15.5,21.5,52.6,22,67.2,2.3C59.4,35,53.7,8.5,37-5Z" />
         <path fill="#189AB4" class="in-top"
